tdf#159381 TimeStamp(RFC3161) create problem by asn1 format error.

DER rules say that BOOLEAN values are either FALSE (0x00)
or TRUE (0xff)

Change-Id: I59f57557fbc4d6447e0d8e994b04adda1ee8c1a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162597
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit d2d8f8bf82558d9aa548fb9f13bed410e0baf79b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162614
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>